Added more string properties to the widgets resource bundle. Refs #2396

--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
@@ -178,3 +178,41 @@ COULD\ NOT\ DETERMINE\ THE\ ORIGIONAL\ LOCATION=Could not determine the original
 COULD\ NOT\ DETERMINE\ THE\ ORIGIONAL\ NODE\ TYPE=Could not determine the original node type
 RE\ IMPORT\ BRANCH=Re-import Branch
 ADDING\ A\ NODE\ WILL\ SAVE\ PENDING\ CHANGES=Adding a node will save pending changes to \"%s\" to disk. Do you want to proceed?
+PROFILES_REFRESH\ LIST=Refresh list
+PAGE\ NOT\ FOUND=Page not found
+<P><STRONG>I/O\ EXCEPTION\ WHILE\ READING\ HELP\ CONTENTS</STRONG></P>=<p><strong>I/O exception while reading help contents</strong></p>
+CONTENTS=Contents
+HELP\ CONTENTS\ NOT\ FOUND=Help contents not found
+HELP=Help
+HELP\ VIEWER=Help Viewer
+OVERVIEW=Overview
+SHORTCUT\ KEYS=Shortcut Keys
+FIND\:=Find:
+REPLACE\ SELECTED=Replace Selected
+FIND\ NEXT=Find Next
+REGULAR\ EXPRESSION=Regular Expression
+<ENTER\ REPLACEMENT\ TEXT>=<enter replacement text>
+<ENTER\ FIND\ TEXT>=<enter find text>
+COPY\ DIRECTORY\ STRUCTURE=Copy directory structure
+METADATA\ FOR\ EACH\ RESOURCE=Metadata for each resource
+ELIPSIS=...
+SUITABLE\ FAVOURITES=Suitable Favourites
+CUSTOM\ PROFILE=Custom profile
+RESTART\ ARBIL=Restart Arbil
+THE\ PROFILES\ HAVE\ BEEN\ RE-DOWNLOADED.\ YOU\ NEED\ TO\ RESTART\ ARBIL\ IN\ ORDER\ TO\ APPLY\ ANY\ CHANGES.=The profiles have been re-downloaded. You need to restart Arbil in order to apply any changes.
+PROFILES_LOADPROFILES=loadProfiles
+PROFILES_LOADING,\ PLEASE\ WAIT...=Loading, please wait...
+SELECT\ PROFILE=Select Profile
+BROWSE\ FOR\ LOCAL\ PROFILES=Browse for local profiles
+PROFILES_ADD\ FILE=Add File
+ADD\ PROFILE=Add Profile
+ENTER\ THE\ PROFILE\ URL=Enter the profile URL
+PROFILES_ADD\ A\ PROFILE\ URL\ TO\ THE\ LIST=Add a profile URL to the list
+PROFILES_ADD\ URL=Add URL
+PROFILES\ SELECTED\ BELOW\ WILL\ BECOME\ AVAILABLE\ IN\ THE\ 'ADD'\ MENU\ OF\ THE\ LOCAL\ CORPUS.\ BY\ DEFAULT,\ ONLY\ SELECTED\ PROFILES\ WILL\ BE\ DOWNLOADED\ FOR\ OFFLINE\ USE.=Profiles selected below will become available in the 'Add' menu of the local corpus. By default, only selected profiles will be downloaded for offline use.
+ONLY\ LOAD\ PROFILES\ SELECTED\ FOR\ MANUAL\ EDITING=Only load profiles selected for manual editing
+PROFILES_DOWNLOAD\ ALL\ PROFILES\ FOR\ OFFLINE\ USE\ (INCLUDING\ UNSELECTED\ PROFILES)=Download all profiles for offline use (including unselected profiles)
+PROFILES_DOWNLOAD\ ALL=Download all
+CLEAR\ CACHED\ COPIES\ AND\ RE-DOWNLOAD\ THE\ SELECTED\ PROFILES=Clear cached copies and re-download the selected profiles
+PROFILES_RELOAD\ SELECTION=Reload selection
+DOWNLOAD\ THE\ LATEST\ CLARIN\ PROFILES=Download the latest CMDI profiles
