Added strings for tooltips and import/export dialogue to the widgets resource bundle. Refs #2396

--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
@@ -216,3 +216,70 @@ PROFILES_DOWNLOAD\ ALL=Download all
 CLEAR\ CACHED\ COPIES\ AND\ RE-DOWNLOAD\ THE\ SELECTED\ PROFILES=Clear cached copies and re-download the selected profiles
 PROFILES_RELOAD\ SELECTION=Reload selection
 DOWNLOAD\ THE\ LATEST\ CLARIN\ PROFILES=Download the latest CMDI profiles
+TOTAL\ METADATA\ FILES\ FOUND\:\ =Total Metadata Files Found: 
+TOOLTIP_SCHEMA\ VALIDATION\ ERROR\ (CHECK\ XML\ CONFORMANCE\ FOR\ DETAILS)=Schema validation error (Check XML Conformance for details)
+TOOLTIP_AVAILABLE\ IN\ THE\ FAVOURITES\ MENU=Available in the favourites menu
+TOOLTIP_UNSAVED\ CHANGES=Unsaved changes
+TOOLTIP_HISTORY\ OF\ CHANGES\ ARE\ AVAILABLE=History of changes are available
+TOOLTIP_FILE\ NOT\ FOUND=File not found
+TOOLTIP_LOCAL\ FILE\ (READ\ ONLY)=Local file (read only)
+TOOLTIP_LOCAL\ FILE\ (EDITABLE)=Local file (editable)
+TOOLTIP_RESOURCE\ FILE\ NOT\ FOUND=Resource file not found
+TOOLTIP_REMOTE\ FILE\ (READ\ ONLY)=Remote file (read only)
+TOOLTIP_COPIES\ ON\ SERVER\:\ ?=Copies on server: ?
+TOOLTIP_COPIES\ ON\ LOCAL\ FILE\ SYSTEM\:\ {0}=Copies on local file system: {0}
+TOOLTIP_COPIES\ IN\ CACHE\:\ {0}=Copies in cache: {0}
+TOOLTIP_STATUS\:\ {0}=Status: {0}
+TOOLTIP_TYPE\ CHECKER\ MESSAGE=Type checker message:\n\"{0}\"
+TOOLTIP_NOT\ ARCHIVABLE=Not archivable
+TOOLTIP_ARCHIVABLE\ FILE=Archivable file
+TOOLTIP_UNATTACHED\ FILE=Unattached file
+TOOLTIP_FORMAT\:\ =Format: 
+TOOLTIP_PATH\:\ {0}=Path: {0}
+TEMPLATE\:\ {0}=Template: {0}
+DESCRIPTION=Description
+TOOLTIP_DESCRIPTION\:\ =Description: 
+TOOLTIP_TITLE\:\ =Title: 
+TOOLTIP_NAME\:\ =Name: 
+TOOLTIP_FIELD\ HAS\ LANGUAGE\ ATTRIBUTE=Field has language attribute
+OPEN\ IN\ LONG\ FIELD\ EDITOR\ TO\ SET\ ATTRIBUTES=Open in long field editor to set attributes
+FIELD\ HAS\ {0}\ ATTRIBUTE(S)=Field has {0} attribute(s)
+ATTRIBUTE\ OF\ {0}=Attribute of {0}
+REPLACE\ EXISTING\ LOCATION?=Replace existing location?
+NEW\ LOCATION=New location
+REPLACE=Replace
+OVERWRITE\ FILE?=Overwrite file?
+THE\ FOLLOWING\ FILE\ ALREADY\ EXIST\ IN\ THE\ TARGET\ LOCATION=The following file already exist in the target location:\n\n%s\n\n Overwrite?
+DETAILS=Details
+PERFORMCOPY=performCopy
+DETAILS\ >\ >=Details > >
+<\ <\ HIDE\ DETAILS=< < Hide details
+MORE\ OPTIONS>\ >=More options> >
+<\ <\ FEWER\ OPTIONS=< < Fewer options
+IMPORT\ BRANCH=Import Branch
+IMPORT_EXPORT_NO\ RELEVANT\ NODES\ ARE\ SELECTED=No relevant nodes are selected
+EXPORT\ BRANCH=Export Branch
+IMPORT=Import
+IMPORT_EXPORT_SHOW/HIDE\ DETAILED\ INFORMATION=Show/hide detailed information
+IMPORT_EXPORT_START=Start
+IMPORT_EXPORT_STOP=Stop
+IMPORT_EXPORT_SHIBBOLETH\ AUTHENTICATION\ VIA\ THE\ SURFNET\ METHOD=Shibboleth authentication via the SURFnet method
+IMPORT_EXPORT_LIMIT\ CHARACTERS\ IN\ FILE\ NAMES\ (LAMUS\ FRIENDLY\ FORMAT)=Limit Characters in File Names (LAMUS friendly format)
+IMPORT_EXPORT_RENAME\ METADATA\ FILES\ (TO\ MATCH\ LOCAL\ CORPUS\ TREE\ NAMES)=Rename Metadata Files (to match local corpus tree names)
+TO\:\ =To: 
+FROM\:\ =From: 
+SHOW\ ERRORS\ IN\ TABLE=Show errors in table
+RESOURCE\ COPY\ ERRORS=Resource Copy Errors
+IF\ COPYING\ OF\ RESOURCE\ FILES\ IS\ SELECTED,\ ANY\ FILE\ COPY\ ERRORS\ WILL\ BE\ REPORTED\ HERE=If copying of resource files is selected, any file copy errors will be reported here.\n
+VALIDATION\ ERRORS=Validation Errors
+WHEN\ THE\ METADATA\ FILES\ ARE\ IMPORTED\ OR\ EXPORTED\ THEY\ WILL\ BE\ VALIDATED\ (FOR\ XML\ SCHEMA\ CONFORMANCE)\ AND\ ANY\ ERRORS\ WILL\ BE\ REPORTED\ HERE=When the metadata files are imported or exported they will be validated (for XML schema conformance) and any errors will be reported here.\n
+PROCESS\ DETAILS=Process Details
+THE\ DETAILS\ OF\ THE\ IMPORT\ /\ EXPORT\ PROCESS\ WILL\ BE\ DISPLAYED\ HERE=The details of the import / export process will be displayed here.\n
+SHOW/HIDE\ ADDITIONAL\ OPTIONS=Show/hide additional options
+IMPORT\ RESOURCE\ FILES\ (IF\ AVAILABLE)=Import Resource Files (if available)
+EXPORT\ RESOURCE\ FILES\ (IF\ AVAILABLE)=Export Resource Files (if available)
+RESOURCE\ FILE\ COPY\ ERRORS\:\ =Resource File Copy Errors: 
+METADATA\ FILE\ VALIDATION\ ERRORS\:\ =Metadata File Validation Errors: 
+METADATA\ FILE\ COPY\ ERRORS\:\ =Metadata File Copy Errors: 
+METADATA\ FILES\ ALREADY\ IN\ LOCAL\ CORPUS\:\ =Metadata Files already in Local Corpus: 
+TOTAL\ METADATA\ FILES\ PROCESSED\:\ =Total Metadata Files Processed: 
