--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
@@ -283,3 +283,12 @@ METADATA\ FILE\ VALIDATION\ ERRORS\:\ =Metadata File Validation Errors:
 METADATA\ FILE\ COPY\ ERRORS\:\ =Metadata File Copy Errors: 
 METADATA\ FILES\ ALREADY\ IN\ LOCAL\ CORPUS\:\ =Metadata Files already in Local Corpus: 
 TOTAL\ METADATA\ FILES\ PROCESSED\:\ =Total Metadata Files Processed: 
+AVAILABLE\ LANGUAGES=Available Languages
+REMOTE\ SEARCH=Remote Search
+NO\ REMOTE\ SEARCH\ TERM\ PROVIDED,\ CANNOT\ SEARCH\ REMOTELY=No remote search term provided, cannot search remotely
+PANEL_PREVIEW=Preview
+LANGUAGES_CLEAR\ SELECTION=Clear Selection
+LANGUAGES_SELECT\ ALL=Select All
+LANGUAGES\ TO\ DISPLAY\ IN\ THE\ FIELD\ LANGUAGE\ SELECT\ BOX\ FOR\ IMDI=Languages to display in the field language select box for IMDI
+#%d = number of search results found on the server
+SEARCH_N\ FOUND\ ON\ SERVER\ =%d found on server 
