--- a/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
+++ b/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
@@ -292,3 +292,14 @@ LANGUAGES_SELECT\ ALL=Select All
 LANGUAGES\ TO\ DISPLAY\ IN\ THE\ FIELD\ LANGUAGE\ SELECT\ BOX\ FOR\ IMDI=Languages to display in the field language select box for IMDI
 #%d = number of search results found on the server
 SEARCH_N\ FOUND\ ON\ SERVER\ =%d found on server 
+IMDI\ TEMPLATES=IMDI Templates
+AVAILABLE\ TEMPLATES\ &\ PROFILES=Available Templates & Profiles
+ENTER\ THE\ NAME\ FOR\ THE\ NEW\ TEMPLATE=Enter the name for the new template
+CLARIN\ PROFILES=Clarin Profiles
+CREATE\ A\ NEW\ EDITABLE\ TEMPLATE=Create a new editable template
+NEW\ TEMPLATE=New Template
+THE\ TEMPLATE\ {0}\ ALREADY\ EXISTS=The template \"{0}\" already exists.
+TEMPLATES=Templates
+THE\ TEMPLATE\ {0}\ COULD\ NOT\ BE\ CREATED.=The template \"{0}\" could not be created.
+#Internal template, %s = name
+%S\ (INTERNAL)=%s (internal)
