Added strings for ArbilDataNode and services to the widgets resource bundle. Refs #2396

--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
@@ -303,3 +303,32 @@ TEMPLATES=Templates
 THE\ TEMPLATE\ {0}\ COULD\ NOT\ BE\ CREATED.=The template \"{0}\" could not be created.
 #Internal template, %s = name
 %S\ (INTERNAL)=%s (internal)
+#text shown for node until it is loaded
+LOADING\ NODE...=loading node...
+HISTORY_LAST\ SAVE=Last Save
+COPY\ OF\ {0}=copy of {0}
+FILE\ NOT\ FOUND=File not found
+COULD\ NOT\ LOAD\ DATA=Could not load data
+MISSING\ FILE\ HAS\ BEEN\ RECOVERED\ FROM\ THE\ LAST\ HISTORY\ ITEM.=Missing file has been recovered from the last history item.
+RECOVER\ HISTORY=Recover History
+COULD\ NOT\ COPY\ FILE\ WHEN\ RECOVERING\ FROM\ THE\ LAST\ HISTORY\ FILE.=Could not copy file when recovering from the last history file.
+#{0} = message explaining error
+{0}.\ HISTORY\ MAY\ BE\ BROKEN\ FOR\ {1}={0}: History may be broken for {1}
+SAVE=Save
+ERROR\ SAVING\ CHANGES\ TO\ DISK,\ CHECK\ THE\ LOG\ FILE\ VIA\ THE\ HELP\ MENU\ FOR\ MORE\ INFORMATION.=Error saving changes to disk, check the log file via the help menu for more information.
+UNKNOWN\ ERROR\ CREATING\ RESOURCE\ NODE\ FOR\ URI\:\ {0}=Unknown error creating resource node for URI: {0}
+ERROR\ CREATING\ RESOURCE\ NODE\ FOR\ URI\:\ {0}=Error creating resource node for URI: {0}
+COULD\ NOT\ DELETE\ NODES\ BECAUSE\ AN\ ERROR\ OCCURRED\ WHILE\ SAVING\ HISTORY\ FOR\ NODE.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Could not delete nodes because an error occurred while saving history for node. See error log for details.
+ERROR\ WHILE\ MOVING\ NODES=Error while moving nodes
+COULD\ NOT\ MOVE\ NODES\ BECAUSE\ AN\ ERROR\ OCCURRED\ WHILE\ SAVING\ HISTORY\ FOR\ NODE.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Could not move nodes because an error occurred while saving history for node. See error log for details.
+{0}\ ALREADY\ EXISTS\ IN\ {1}\ AND\ WILL\ NOT\ BE\ ADDED\ AGAIN={0} already exists in {1} and will not be added again
+CANNOT\ LINK\ OR\ MOVE\ A\ NODE\ INTO\ ITSELF=Cannot link or move a node into itself
+LOADING\ ERROR=Loading Error
+ERROR\ ADDING\ NODE,\ COULD\ NOT\ WAIT\ FOR\ FILE\ TO\ LOAD=Error adding node, could not wait for file to load
+NODES\ OF\ THIS\ TYPE\ CANNOT\ BE\ PASTED\ INTO\ AT\ THIS\ STAGE=Nodes of this type cannot be pasted into at this stage
+PASTED\ STRING\ IS\ NOT\ AND\ IMDI\ FILE=Pasted string is not and IMDI file
+THE\ TARGET\ FILE\ IS\ NOT\ IN\ THE\ CACHE=The target file is not in the cache
+CANNOT\ PASTE\ SESSION\ SUBNODES\ INTO\ A\ CORPUS=Cannot paste session subnodes into a corpus
+THE\ TARGET\ NODE'S\ FILE\ DOES\ NOT\ EXIST=The target node's file does not exist
+COPYING\ WITH\ UNSAVED\ CHANGES=Copying with unsaved changes
+SOME\ OF\ THE\ NODES\ TO\ BE\ COPIED\ CONTAIN\ UNSAVED\ CHANGES=Some of the nodes to be copied contain unsaved changes.\nUnless they are saved, these changes will not be present in the resulting nodes. Continue anyway?
