Added strings for tree helper to the widgets resource bundle. Refs #2396

--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
@@ -332,3 +332,11 @@ CANNOT\ PASTE\ SESSION\ SUBNODES\ INTO\ A\ CORPUS=Cannot paste session subnodes 
 THE\ TARGET\ NODE'S\ FILE\ DOES\ NOT\ EXIST=The target node's file does not exist
 COPYING\ WITH\ UNSAVED\ CHANGES=Copying with unsaved changes
 SOME\ OF\ THE\ NODES\ TO\ BE\ COPIED\ CONTAIN\ UNSAVED\ CHANGES=Some of the nodes to be copied contain unsaved changes.\nUnless they are saved, these changes will not be present in the resulting nodes. Continue anyway?
+%D\ NODE(S)\ COULD\ NOT\ BE\ DELETED\ BECAUSE\ THEY\ HAVE\ NO\ PARENT=%d node(s) could not be deleted because they have no parent
+THE\ LOCATION\ ALREADY\ EXISTS\ AND\ CANNOT\ BE\ ADDED\ AGAIN=The location already exists and cannot be added again
+DELETE=Delete
+DELETE\ {0}\ NODES?=Delete {0} nodes?
+THIS\ WILL\ ALSO\ SAVE\ ANY\ PENDING\ CHANGES\ TO\ DISK.=This will also save any pending changes to disk.
+DELETE\ THE\ NODE\ {0}?=Delete the node \"{0}\"?
+DELETE\ %D\ NODES\ FROM\ THEIR\ PARENT\ '%S'?=Delete %d nodes from their parent '%s'?\nThis will save pending changes.
+DELETE\ THE\ NODE\ '%S'\ FROM\ ITS\ PARENT\ '%S'?=Delete the node '%s' from its parent '%s'?\nThis will save pending changes.
