--- a/src/main/resources/nl/mpi/arbil/localisation/Services.properties
+++ b/src/main/resources/nl/mpi/arbil/localisation/Services.properties
@@ -20,3 +20,15 @@ THERE\ IS\ NO\ CONTROLLED\ VOCABULARY\ FOR\ EITHER\ WRITTEN\ RESOURCE\ OR\ MEDIA
 THIS\ PROBABLY\ MEANS\ THAT\ THE\ FILE\ IS\ NOT\ ARCHIVABLE.\ HOWEVER,\ YOU\ CAN\ PROCEED\ BY\ MANUALLY\ SELECTING\ THE\ RESOURCE\ TYPE.=This probably means that the file is not archivable. However, you can proceed by manually selecting the resource type.
 DO\ YOU\ WANT\ TO\ PROCEED?=Do you want to proceed?
 WARNING\:\ DOING\ THIS\ WILL\ NOT\ GUARANTEE\ THAT\ YOUR\ DATA\ WILL\ BE\ UPLOADABLE\ TO\ THE\ CORPUS\ SERVER!=WARNING: Doing this will not guarantee that your data will be uploadable to the corpus server!
+ERROR\ READING\ VIA\ THE\ IMDI\ API=Error reading via the IMDI API
+MANUALLY\ OVERRIDDEN\ (MIGHT\ NOT\ BE\ COMPATIBLE\ WITH\ THE\ ARCHIVE)=Manually overridden (might not be compatible with the archive)
+CANCEL=Cancel
+THE\ TYPE\ CHECKER\ DOES\ NOT\ RECOGNISE\ THE\ SELECTED\ FILE(S),\ WHICH\ MEANS\ THAT\ THEY\\NARE\ NOT\ AN\ ARCHIVABLE\ TYPE.\ THIS\ ACTION\ WILL\ OVERRIDE\ THAT\ DECISION\ AND\ ALLOW\ YOU\\NTO\ ADD\ THE\ FILE(S)\ TO\ A\ SESSION,\ AS\ EITHER\ MEDIA\ OR\ WRITTEN\ RESOURCES,\\NHOWEVER\ IT\ MIGHT\ NOT\ BE\ POSSIBLE\ TO\ IMPORT\ THE\ RESULT\ TO\ THE\ CORPUS\ SERVER.=The type checker does not recognise the selected file(s), which means that they\\nare not an archivable type. This action will override that decision and allow you\\nto add the file(s) to a session, as either media or written resources,\\nhowever it might not be possible to import the result to the corpus server.
+OVERRIDE\ TYPE\ CHECKER\ DECISION=Override Type Checker Decision
+ERROR\ READING\ ONE\ OF\ THE\ LINKS\ VIA\ THE\ IMDI\ API=Error reading one of the links via the IMDI API
+GET\ LINKS=Get Links
+ERROR\ READING\ LINKS\ VIA\ THE\ IMDI\ API=Error reading links via the IMDI API
+REMOVE\ IMDI\ LINKS=Remove IMDI Links
+COPY\ IMDI\ FILE=Copy IMDI File
+ERROR\ READING\ VIA\ THE\ IMDI\ API.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Error reading via the IMDI API. See error log for details.
+ADD\ LINK=Add Link
