--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Services.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Services.properties
@@ -23,7 +23,7 @@ WARNING\:\ DOING\ THIS\ WILL\ NOT\ GUARANTEE\ THAT\ YOUR\ DATA\ WILL\ BE\ UPLOAD
 ERROR\ READING\ VIA\ THE\ IMDI\ API=Error reading via the IMDI API
 MANUALLY\ OVERRIDDEN\ (MIGHT\ NOT\ BE\ COMPATIBLE\ WITH\ THE\ ARCHIVE)=Manually overridden (might not be compatible with the archive)
 CANCEL=Cancel
-THE\ TYPE\ CHECKER\ DOES\ NOT\ RECOGNISE\ THE\ SELECTED\ FILE(S)=The type checker does not recognise the selected file(s), which means that they\\nare not an archivable type. This action will override that decision and allow you\\nto add the file(s) to a session, as either media or written resources,\\nhowever it might not be possible to import the result to the corpus server.
+THE\ TYPE\ CHECKER\ DOES\ NOT\ RECOGNISE\ THE\ SELECTED\ FILE(S)=The type checker does not recognise the selected file(s), which means that they\nare not an archivable type. This action will override that decision and allow you\nto add the file(s) to a session, as either media or written resources,\nhowever it might not be possible to import the result to the corpus server.
 OVERRIDE\ TYPE\ CHECKER\ DECISION=Override Type Checker Decision
 ERROR\ READING\ ONE\ OF\ THE\ LINKS\ VIA\ THE\ IMDI\ API=Error reading one of the links via the IMDI API
 GET\ LINKS=Get Links
@@ -32,3 +32,10 @@ REMOVE\ IMDI\ LINKS=Remove IMDI Links
 COPY\ IMDI\ FILE=Copy IMDI File
 ERROR\ READING\ VIA\ THE\ IMDI\ API.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Error reading via the IMDI API. See error log for details.
 ADD\ LINK=Add Link
+COULD\ NOT\ OPEN\ THE\ REQUIRED\ TEMPLATE\ FILE\:\ %S.\ SEE\ ERROR\ LOG\ FOR\ DETAILS\ =Could not open the required template file: %s. See error log for details 
+LOAD\ TEMPLATE=Load Template
+THE\ REQUIRED\ TEMPLATE\ COULD\ NOT\ BE\ READ.=The required template could not be read.
+DATA\ CATEGORY\:\ <{0}>.\ NO\ DESCRIPTION\ AVAILABLE.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Data category: <{0}>. No description available. See error log for details.
+NO\ USAGE\ DESCRIPTION\ FOUND\ IN\ THIS\ TEMPLATE\ FOR\:\ {0}=No usage description found in this template for: {0}
+COULD\ NOT\ READ\ THE\ REQUIRED\ TEMPLATE\ FILE\:\ %S.\ SEE\ ERROR\ LOG\ FOR\ DETAILS\ =Could not read the required template file: %s. See error log for details 
+LOAD\ CLARIN\ TEMPLATE=Load Clarin Template
