Added some more strings to the service resource bundle Refs #2396

--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Services.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Services.properties
@@ -39,3 +39,9 @@ DATA\ CATEGORY\:\ <{0}>.\ NO\ DESCRIPTION\ AVAILABLE.\ SEE\ ERROR\ LOG\ FOR\ DET
 NO\ USAGE\ DESCRIPTION\ FOUND\ IN\ THIS\ TEMPLATE\ FOR\:\ {0}=No usage description found in this template for: {0}
 COULD\ NOT\ READ\ THE\ REQUIRED\ TEMPLATE\ FILE\:\ %S.\ SEE\ ERROR\ LOG\ FOR\ DETAILS\ =Could not read the required template file: %s. See error log for details 
 LOAD\ CLARIN\ TEMPLATE=Load Clarin Template
+FAILED\ TO\ REMOVE\ RESOURCE\ PROXY\ WITH\ ID\ {0}=Failed to remove resource proxy with id {0}
+UNEXPECTED\ RELATION\ BETWEEN\ SOURCE\ AND\ TARGET\ PATHS.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Unexpected relation between source and target paths. See error log for details.
+INSERT\ NODE=Insert node
+COULD\ NOT\ READ\ THE\ XML\ SCHEMA=Could not read the XML Schema
+ERROR\ INSERTING\ NODE=Error inserting node
+NO\ TEMPLATE\ FOUND\ FOR=No template found for: {0}
