--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
@@ -340,3 +340,4 @@ THIS\ WILL\ ALSO\ SAVE\ ANY\ PENDING\ CHANGES\ TO\ DISK.=This will also save any
 DELETE\ THE\ NODE\ {0}?=Delete the node \"{0}\"?
 DELETE\ %D\ NODES\ FROM\ THEIR\ PARENT\ '%S'?=Delete %d nodes from their parent '%s'?\nThis will save pending changes.
 DELETE\ THE\ NODE\ '%S'\ FROM\ ITS\ PARENT\ '%S'?=Delete the node '%s' from its parent '%s'?\nThis will save pending changes.
+CANNOT\ COPY\ {0}\ TO\ {1}="Cannot copy '{0}' to '{1}'"
