--- a/src/main/resources/nl/mpi/arbil/localisation/Services.properties
+++ b/src/main/resources/nl/mpi/arbil/localisation/Services.properties
@@ -45,3 +45,9 @@ INSERT\ NODE=Insert node
 COULD\ NOT\ READ\ THE\ XML\ SCHEMA=Could not read the XML Schema
 ERROR\ INSERTING\ NODE=Error inserting node
 NO\ TEMPLATE\ FOUND\ FOR=No template found for: {0}
+CHANGING\ YOUR\ CURRENT\ PROJECT\ FROM\ {0}\ TO\ {1}=Changing your current project from:\n{0}\nto:\n{1}
+ARBIL\ WILL\ NEED\ TO\ CLOSE\ ALL\ TABLES\ ONCE\ THE\ FILES\ ARE\ MOVED=Arbil will need to close all tables once the files are moved.\nDo you wish to continue?
+ERROR\ SAVING\ CONFIGURATION\ TO\ {0}=Error saving configuration to {0}
+THE\ FILES\ IN\ YOUR\ 'LOCAL\ CORPUS'\ COULD\ NOT\ BE\ MOVED\ TO\ THE\ REQUESTED\ LOCATION=The files in your 'Local Corpus' could not be moved to the requested location.\\nYou can cancel now and nothing will be changed, or you can change the working\\ndirectory anyway.\\nIf you continue, any corpus and session files in your 'Local Corpus' will move\\ninto your 'Working Directories' tree and you will have to import them manually.\\nDo you wish to change the working directory despite this?
+ERROR\ SAVING\ CONFIGURATION=Error saving configuration
+COULD\ NOT\ WRITE\ NEW\ CONFIGURATION\ TO\ {0}=Could not write new configuration to {0}
