Added strings for the version manager to the services resource bundle. Refs #2396

--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Services.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Services.properties
@@ -48,6 +48,12 @@ NO\ TEMPLATE\ FOUND\ FOR=No template found for: {0}
 CHANGING\ YOUR\ CURRENT\ PROJECT\ FROM\ {0}\ TO\ {1}=Changing your current project from:\n{0}\nto:\n{1}
 ARBIL\ WILL\ NEED\ TO\ CLOSE\ ALL\ TABLES\ ONCE\ THE\ FILES\ ARE\ MOVED=Arbil will need to close all tables once the files are moved.\nDo you wish to continue?
 ERROR\ SAVING\ CONFIGURATION\ TO\ {0}=Error saving configuration to {0}
-THE\ FILES\ IN\ YOUR\ 'LOCAL\ CORPUS'\ COULD\ NOT\ BE\ MOVED\ TO\ THE\ REQUESTED\ LOCATION=The files in your 'Local Corpus' could not be moved to the requested location.\\nYou can cancel now and nothing will be changed, or you can change the working\\ndirectory anyway.\\nIf you continue, any corpus and session files in your 'Local Corpus' will move\\ninto your 'Working Directories' tree and you will have to import them manually.\\nDo you wish to change the working directory despite this?
+THE\ FILES\ IN\ YOUR\ 'LOCAL\ CORPUS'\ COULD\ NOT\ BE\ MOVED\ TO\ THE\ REQUESTED\ LOCATION=The files in your 'Local Corpus' could not be moved to the requested location.\nYou can cancel now and nothing will be changed, or you can change the working\ndirectory anyway.\nIf you continue, any corpus and session files in your 'Local Corpus' will move\ninto your 'Working Directories' tree and you will have to import them manually.\nDo you wish to change the working directory despite this?
 ERROR\ SAVING\ CONFIGURATION=Error saving configuration
 COULD\ NOT\ WRITE\ NEW\ CONFIGURATION\ TO\ {0}=Could not write new configuration to {0}
+COULD\ NOT\ WRITE\ TO\ STORAGE\ DIRECTORY.\ UPDATE\ CHECK\ FAILED!=Could not write to storage directory. Update check failed!
+THERE\ WAS\ AN\ ERROR\ UPDATING\ THE\ APPLICATION.PLEASE\ GO\ TO\ THE\ WEBSITE\ AND\ UPDATE\ VIA\ THE\ DOWNLOAD\ LINK.=There was an error updating the application.\nPlease go to the website and update via the download link.
+THERE\ IS\ A\ NEW\ VERSION\ AVAILABLE.PLEASE\ GO\ TO\ THE\ WEBSITE\ AND\ UPDATE\ VIA\ THE\ DOWNLOAD\ LINK.=There is a new version available.\nPlease go to the website and update via the download link.
+THERE\ WAS\ AN\ ERROR\ RESTARTING\ THE\ APPLICATION.THE\ UPDATE\ WILL\ TAKE\ EFFECT\ NEXT\ TIME\ THE\ APPLICATION\ IS\ RESTARTED.=There was an error restarting the application.\nThe update will take effect next time the application is restarted.
+ERROR=Error
+There\ is\ a\ new\ version\ available=There is a new version available\\nDo you want to update now?
