Added strings for the plugin manager to the services resource bundle. Refs #2396

--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Services.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Services.properties
@@ -57,3 +57,9 @@ THERE\ IS\ A\ NEW\ VERSION\ AVAILABLE.PLEASE\ GO\ TO\ THE\ WEBSITE\ AND\ UPDATE\
 THERE\ WAS\ AN\ ERROR\ RESTARTING\ THE\ APPLICATION.THE\ UPDATE\ WILL\ TAKE\ EFFECT\ NEXT\ TIME\ THE\ APPLICATION\ IS\ RESTARTED.=There was an error restarting the application.\nThe update will take effect next time the application is restarted.
 ERROR=Error
 There\ is\ a\ new\ version\ available=There is a new version available\\nDo you want to update now?
+FAILED\ TO\ PASS\ THE\ JOURNAL\ TO\ THE\ REQUESTED\ PLUGIN=Failed to pass the journal to the requested plugin.\\n{0}\\n{1}\\n{2}.{3}.{4}\\n{5}
+FAILED\ TO\ ACTIVATE\ THE\ REQUESTED\ PLUGIN=Failed to activate the requested plugin.\\n{0}\\n{1}\\n{2}.{3}.{4}\\n{5}
+FAILED\ TO\ SHOW\ THE\ REQUESTED\ PLUGIN=Failed to show the requested plugin.\\n{0}\\n{1}\\n{2}.{3}.{4}\\n{5}
+NO\ METHOD\ TO\ ACTIVATE\ THIS\ TYPE\ OF\ PLUGIN\ YET=No method to activate this type of plugin yet.\\n{0}\\n{1}.{2}.{3}\\n{4}
+FAILED\ TO\ DEACTIVATE\ THE\ REQUESTED\ PLUGIN=Failed to deactivate the requested plugin.\\n{0}\\n{1}\\n{2}.{3}.{4}\\n{5}
+NO\ METHOD\ TO\ DEACTIVATE\ THIS\ TYPE\ OF\ PLUGIN\ YET=No method to deactivate this type of plugin yet.\\n{0}\\n{1}.{2}.{3}\\n{4}
