--- a/src/main/resources/nl/mpi/arbil/localisation/Menus.properties
+++ b/src/main/resources/nl/mpi/arbil/localisation/Menus.properties
@@ -260,7 +260,7 @@ SAVE\ CHANGES\ TO\ DISK=Save Changes to Disk
 SELECT\ RESOURCE\ FILE=Select Resource File
 
 BROWSE\ FOR\ RESOURCE\ FILE=Browse For Resource File
-ABOUT\ TO\ REPLACE\ ALL\ VALUES\ IN\ COLUMN\ {0}\ WITH\ THE\ VALUE\ {1}(<MULTIPLE\ VALUES>\ WILL\ NOT\ BE\ AFFECTED)=About to replace all values in column \\"{0}\\"\nwith the value \\"{1}\\"\n(<multiple values> will not be affected)
+ABOUT\ TO\ REPLACE\ ALL\ VALUES\ IN\ COLUMN\ {0}\ WITH\ THE\ VALUE\ {1}(<MULTIPLE\ VALUES>\ WILL\ NOT\ BE\ AFFECTED)=About to replace all values in column \"{0}\"\nwith the value \"{1}\"\n(<multiple values> will not be affected)
 LOGOUT\ ERROR=Logout Error
 
 SAVE\ CURRENT\ COLUMN\ VIEW=Save Current Column View
