--- a/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
+++ b/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
@@ -342,5 +342,5 @@ DELETE\ %D\ NODES\ FROM\ THEIR\ PARENT\ '%S'?=Delete %d nodes from their parent 
 DELETE\ THE\ NODE\ '%S'\ FROM\ ITS\ PARENT\ '%S'?=Delete the node '%s' from its parent '%s'?\nThis will save pending changes.
 CANNOT\ COPY\ {0}\ TO\ {1}="Cannot copy '{0}' to '{1}'"
 FOUND\ MORE\ RESULTS\ THAN\ CAN\ BE\ DISPLAYED,\ ONLY\ SHOWING\ THE\ FIRST\ {0}\ RESULTS=Found more results than can be displayed, only showing the first {0} results
-CANNOT\ SEARCH\ \\"{0}\\"\ BECAUSE\ IT\ DOES\ NOT\ HAVE\ AN\ ARCHIVE\ HANDLE=Cannot search \\"{0}\\" because it does not have an archive handle
+CANNOT\ SEARCH\ {0}\ BECAUSE\ IT\ DOES\ NOT\ HAVE\ AN\ ARCHIVE\ HANDLE=Cannot search \"{0}\" because it does not have an archive handle
 DELETE\ FROM\ PARENT=Delete from parent
