added german resources (copied from french)

--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets_de.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets_de.properties
@@ -293,3 +293,44 @@ FILE\ NOT\ FOUND=Datei nicht gefunden
 COULD\ NOT\ LOAD\ DATA=Daten konnten nicht geladen werden
 RECOVER\ HISTORY=Verlauf wiederherstellen
 MISSING\ FILE\ HAS\ BEEN\ RECOVERED\ FROM\ THE\ LAST\ HISTORY\ ITEM.=Fehlende Datei wurde aus dem letzten Verlaufselement wiederhergestellt
+FAILED\ TO\ LOAD\ {0}\ LOCATIONS.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.",\ "WARNING=Fehler beim Laden von Speicherort {0}. F\u00fcr mehr Details bitte Fehlerprotokoll \u00fcberpr\u00fcfen.
+THIS\ ACTION\ WILL\ SAVE\ ALL\ PENDING\ CHANGES\ ON\ {0}\ TO\ DISK.\ CONTINUE?=Durch diesen Vorgang werden alle ausstehenden \u00c4nderungen in {0} auf Festplatte gespeichert. Fortsetzen?
+CANNOT\ DELETE=Kann nicht gel\u00f6scht werden
+THE\ TEMPLATE\ {0}\ ALREADY\ EXISTS=Die Vorlage "{0}" existiert bereits.
+THE\ TEMPLATE\ {0}\ COULD\ NOT\ BE\ CREATED.=Die Vorlage "{0}" konnte nicht erstellt werden.
+%S\ (INTERNAL)=%s (intern)
+LOADING\ NODE...=Knoten wird geladen...
+COPY\ OF\ {0}=Kopie von {0}
+{0}.\ HISTORY\ MAY\ BE\ BROKEN\ FOR\ {1}={0}: Verlauf f\u00fcr {1} k\u00f6nnte fehlerhaft sein.
+COULD\ NOT\ COPY\ FILE\ WHEN\ RECOVERING\ FROM\ THE\ LAST\ HISTORY\ FILE.=Die Datei konnte beim Wiederherstellen aus der letzten Verlaufsdatei nicht kopiert werden.
+SAVE=Speichern
+ERROR\ SAVING\ CHANGES\ TO\ DISK,\ CHECK\ THE\ LOG\ FILE\ VIA\ THE\ HELP\ MENU\ FOR\ MORE\ INFORMATION.=Fehlern bei Speicherung der \u00c4nderungen auf Festplatte, f\u00fcr mehr Details bitte Fehlerprotokoll im Hilfemen\u00fc \u00fcberpr\u00fcfen.
+UNKNOWN\ ERROR\ CREATING\ RESOURCE\ NODE\ FOR\ URI\:\ {0}=Unbekannte Fehler beim Erstellen des Ressourceknotens f\u00fcr URI: {0}
+ERROR\ CREATING\ RESOURCE\ NODE\ FOR\ URI\:\ {0}=Fehler beim Erstellen des Ressourceknotens f\u00fcr URI: {0}
+COULD\ NOT\ DELETE\ NODES\ BECAUSE\ AN\ ERROR\ OCCURRED\ WHILE\ SAVING\ HISTORY\ FOR\ NODE.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Knoten konnten nicht gel\u00f6scht werden, da ein Fehler beim Speichern des Verlaufs f\u00fcr den Knoten aufgetreten ist. F\u00fcr mehr Details bitte Fehlerprotokoll \u00fcberpr\u00fcfen.
+ERROR\ WHILE\ MOVING\ NODES=Fehler beim Verschieben von Knoten
+COULD\ NOT\ MOVE\ NODES\ BECAUSE\ AN\ ERROR\ OCCURRED\ WHILE\ SAVING\ HISTORY\ FOR\ NODE.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Knoten konnten nicht verschoben werden, da ein Fehler beim Speichern des Verlaufs f\u00fcr den Knoten augetreten ist. F\u00fcr mehr Details bitte Fehlerprotokoll \u00fcberpr\u00fcfen.
+{0}\ ALREADY\ EXISTS\ IN\ {1}\ AND\ WILL\ NOT\ BE\ ADDED\ AGAIN={0} besteht bereits in {1} und wird nicht nochmals hinzugef\u00fcgt.
+CANNOT\ LINK\ OR\ MOVE\ A\ NODE\ INTO\ ITSELF=Knoten kann nicht mit sich selbst verkn\u00fcpft oder in sich selbst verschoben werden.
+LOADING\ ERROR=Fehler beim Ladevorgang
+ERROR\ ADDING\ NODE,\ COULD\ NOT\ WAIT\ FOR\ FILE\ TO\ LOAD=Fehler beim Hinzuf\u00fcgen von Knoten, Laden der Datei konnte nicht abgewartet werden
+NODES\ OF\ THIS\ TYPE\ CANNOT\ BE\ PASTED\ INTO\ AT\ THIS\ STAGE=Knoten dieses Types k\u00f6nnen in dieser Phase nicht eingef\u00fcgt werden
+PASTED\ STRING\ IS\ NOT\ AND\ IMDI\ FILE=Eingef\u00fcgte Zeichenfolge ist keine IMDI Datei
+THE\ TARGET\ FILE\ IS\ NOT\ IN\ THE\ CACHE=Die Zieldati befindet sich nicht im Zwischenspeicher
+CANNOT\ PASTE\ SESSION\ SUBNODES\ INTO\ A\ CORPUS=Session Unterknoten k\u00f6nnen nicht bei Korpus-Knoten eingef\u00fcgt werden
+THE\ TARGET\ NODE'S\ FILE\ DOES\ NOT\ EXIST=Datei des Zielknotens besteht nicht
+COPYING\ WITH\ UNSAVED\ CHANGES=Kopieren mit nicht gespeicherten \u00c4nderungen
+SOME\ OF\ THE\ NODES\ TO\ BE\ COPIED\ CONTAIN\ UNSAVED\ CHANGES=Einige der zu kopierenden Knoten enthalten nicht gespeicherte \u00c4nderungen\nWenn sie nicht gespeichert sind, werden diese \u00c4nderungen nicht in die zu erstellenden Knoten \u00fcbernommen. Trotzdem fortfahren?
+%D\ NODES\ COULD\ NOT\ BE\ DELETED\ BECAUSE\ THEY\ HAVE\ NO\ PARENT=%d Knoten konnten nicht gel\u00f6scht werden, da sie keine Elternknoten haben
+COULD\ NOT\ DELETE\ NODE\ BECAUSE\ IT\ HAS\ NO\ PARENT=Knoten konnte nicht gel\u00f6scht werden, da es keinen Elternknoten gibt
+THE\ LOCATION\ ALREADY\ EXISTS\ AND\ CANNOT\ BE\ ADDED\ AGAIN=Der speicherort besteht bereits und kann nicht erneut hinzugef\u00fcgt werden
+DELETE=L\u00f6schen
+DELETE\ {0}\ NODES?={0} Knoten l\u00f6schen?
+THIS\ WILL\ ALSO\ SAVE\ ANY\ PENDING\ CHANGES\ TO\ DISK.=Durch diesen Vorgang werden auch alle ausstehenden \u00c4nderungen auf Festplatte gespeichert.
+DELETE\ THE\ NODE\ {0}?=KNoten "{0}" l\u00f6schen?
+DELETE\ %D\ NODES\ FROM\ THEIR\ PARENT\ '%S'?=%d Knoten von ihren Eltern '%s' l\u00f6schen?\nHierduch werden ausstehende \u00c4nderungen gespeichert.
+DELETE\ THE\ NODE\ '%S'\ FROM\ ITS\ PARENT\ '%S'?=Knoten '%s' von seinen Elternknoten '%s' l\u00f6schen?\nHierdurch werden ausstehende \u00c4nderungen gespeichert.
+CANNOT\ COPY\ {0}\ TO\ {1}="Kann '{0}' nicht zu '{1}' kopieren"
+FOUND\ MORE\ RESULTS\ THAN\ CAN\ BE\ DISPLAYED,\ ONLY\ SHOWING\ THE\ FIRST\ {0}\ RESULTS=Mehr Resultate gefunden als angezeigt werden k\u00f6nnen, nur die ersten {0} Ergebnisse werden angezeigt
+CANNOT\ SEARCH\ {0}\ BECAUSE\ IT\ DOES\ NOT\ HAVE\ AN\ ARCHIVE\ HANDLE=Kann "{0}" nicht suchen, da es \u00fcber keine entsprechende Archivhandle verf\u00fcgt
+DELETE\ FROM\ PARENT=Von Elternknoten l\u00f6schen
